--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/style.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -22,7 +23,23 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        
+
+        <!-- Header principal de la WEB -->
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="">Costos</a></li>
+                    <li><a href="">Cuartos</a></li>
+                    <li><a href="">Contacto y Reservaciones</a></li>
+                    <li><a href="">Buffet</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <!-- Header principal de la WEB -->
+
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
