--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Hotel Cometa</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/style.css">
+        <link href='http://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet' type='text/css'>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -27,15 +28,18 @@
 
         <!-- Header principal de la WEB -->
         <header>
-            <nav>
-                <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="">Costos</a></li>
-                    <li><a href="">Cuartos</a></li>
-                    <li><a href="">Contacto y Reservaciones</a></li>
-                    <li><a href="">Buffet</a></li>
-                </ul>
-            </nav>
+            <div id="logo"><h1><img src="img/logo_cometa.png" alt="Logo del hotel"></h1></div>
+            <div id="navigation">
+                <nav class="callig">
+                    <ul>
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="#">Costos</a></li>
+                        <li><a href="#">Cuartos</a></li>
+                        <li><a href="#">Contacto y Reservaciones</a></li>
+                        <li><a href="#">Buffet</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
 
         <!-- Header principal de la WEB -->
