--- a/index.html
+++ b/index.html
@@ -42,7 +42,26 @@
             </div>
         </header>
 
-        <!-- Header principal de la WEB -->
+        <!-- Slider -->
+
+        <div class="slider_container fullScreen">
+            <div class="sliderContainer">
+                <div class="slide fullScreen"><h1>s1</h1></div>
+                <div class="slide fullScreen"><h1>s2</h1></div>
+                <div class="slide fullScreen"><h1>s3</h1></div>
+                <div class="slide fullScreen"><h1>s4</h1></div>
+            </div>
+        </div>
+
+         <!-- Slider Cotrolls -->
+        
+        <div class="fullScreen"></div>
+        <nav class="slide_controls">
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+        </nav>
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
