--- a/index.html
+++ b/index.html
@@ -46,16 +46,22 @@
 
         <div class="slider_container fullScreen">
             <div class="sliderContainer">
-                <div class="slide fullScreen"><h1>s1</h1></div>
-                <div class="slide fullScreen"><h1>s2</h1></div>
-                <div class="slide fullScreen"><h1>s3</h1></div>
-                <div class="slide fullScreen"><h1>s4</h1></div>
+                <div class="slide fullScreen" data-background="img/DSCF0302"></div>
+                <div class="slide fullScreen" data-background="img/DSCF0303"></div>
+                <div class="slide fullScreen" data-background="img/DSCF0308"></div>
+                <div class="slide fullScreen" data-background="img/DSCN1592"></div>
             </div>
         </div>
 
          <!-- Slider Cotrolls -->
         
-        <div class="fullScreen"></div>
+        <section class="fullScreen" id="index">
+            <div class="mensajePrincipal">
+                <p class="triangle"><span>Desde 200 usd por noche</span></p>
+                <h2>Un lugar para disfrutar y relajarse</h2>
+                <p>Cancún Mexico</p>
+            </div>
+        </section>
         <nav class="slide_controls">
             <li>1</li>
             <li>2</li>
