Paso 6 Contenido cuartos
segunda seccion donde mostramos los cuartos con transiciones

--- a/index.html
+++ b/index.html
@@ -52,8 +52,6 @@
                 <div class="slide fullScreen" data-background="img/DSCN1592"></div>
             </div>
         </div>
-
-         <!-- Slider Cotrolls -->
         
         <section class="fullScreen" id="index">
             <div class="mensajePrincipal">
@@ -62,13 +60,51 @@
                 <p>Cancún Mexico</p>
             </div>
         </section>
-        <nav class="slide_controls">
+
+         <!-- Slider Cotrolls -->
+
+         <section id='cuartos' class="fullScreen">
+            <h1 class='centerCircle callig'>El mejor servicio</h1>
+            <div class="half halfRooms">
+                <img src="img/DSCF0037.jpg">
+            </div>
+            <div class="half halfRooms">
+                <img src="img/DSCN1127.jpg">
+            </div>
+        </section>
+
+        <!--<nav class="slide_controls">
             <li>1</li>
             <li>2</li>
             <li>3</li>
             <li>4</li>
-        </nav>
+        </nav>-->
 
+        <!--<section id="costo" class='fullScreen callig'>
+            <div class="marginTop">
+                <div class="precio">
+                    <div class="ribbon"></div>
+                    <h3>Paquete básico</h3>
+                    <p>Disfruta de nuestro paquete sencillo, prefecto para vacaciones improvisadas donde el presupuesto es limitado.</p>
+                    <p class="costo">300</p>
+                    <a href="#" class="ver-mas"></a>
+                </div>
+                <div class="precio">
+                    <div class="ribbon"></div>
+                    <h3>Paquete básico</h3>
+                    <p>Disfruta de nuestro paquete sencillo, prefecto para vacaciones improvisadas donde el presupuesto es limitado.</p>
+                    <p class="costo">300</p>
+                    <a href="#" class="ver-mas"></a>
+                </div>
+                <div class="precio">
+                    <div class="ribbon"></div>
+                    <h3>Paquete básico</h3>
+                    <p>Disfruta de nuestro paquete sencillo, prefecto para vacaciones improvisadas donde el presupuesto es limitado.</p>
+                    <p class="costo">300</p>
+                    <a href="#" class="ver-mas"></a>
+                </div>
+            </div>
+        </section>-->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
