--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <div id="logo"><h1><img src="img/logo_cometa.png" alt="Logo del hotel"></h1></div>
             <div id="navigation">
                 <nav class="callig">
-                    <ul>
-                        <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Costos</a></li>
-                        <li><a href="#">Cuartos</a></li>
-                        <li><a href="#">Contacto y Reservaciones</a></li>
-                        <li><a href="#">Buffet</a></li>
+                    <ul id="navegacionPrincipal">
+                        <li><a href="#index">Inicio</a></li>
+                        <li><a href="#costos">Costos</a></li>
+                        <li><a href="#cuartos">Cuartos</a></li>
+                        <li><a href="#contacto">Contacto y Reservaciones</a></li>
+                        <li><a href="#buffet">Buffet</a></li>
                     </ul>
                 </nav>
             </div>
@@ -46,7 +46,7 @@
 
         <div class="slider_container fullScreen">
             <div class="sliderContainer">
-                <div class="slide fullScreen" data-background="img/DSCF0302"></div>
+                <div class="slide fullScreen" data-background="img/DSCF0302" ></div>
                 <div class="slide fullScreen" data-background="img/DSCF0303"></div>
                 <div class="slide fullScreen" data-background="img/DSCF0308"></div>
                 <div class="slide fullScreen" data-background="img/DSCN1592"></div>
@@ -99,23 +99,23 @@
 
         <!-- 3ra parte de la navegacion -->
 
-        <section id="costos" class='fullScreen callig'>
+        <section id="costos" class='fullScreen callig' data-stellar-background-ratio="0.5">
             <div class="marginTop">
-                <div class="precio">
+                <div class="precio" data-stellar-ratio="2.09">
                     <div class="ribbon"></div>
                     <h3>Paquete básico</h3>
                     <p>Disfruta de nuestro paquete sencillo, prefecto para vacaciones improvisadas donde el presupuesto es limitado.</p>
                     <p class="costo">300</p>
                     <a class="ver-mas" data-number='0'>Conoce más del paquete</a>
                 </div>
-                <div class="precio">
+                <div class="precio" data-stellar-ratio="1.5" data-stellar-vertical-offset="1450">
                     <div class="ribbon"> </div>
                     <h3>Paquete básico</h3>
                     <p>Disfruta de nuestro paquete sencillo, prefecto para vacaciones improvisadas donde el presupuesto es limitado.</p>
                     <p class="costo">300</p>
                     <a class="ver-mas" data-number='1'>Conoce más del paquete</a>
                 </div>
-                <div class="precio">
+                <div class="precio" data-stellar-ratio="3" data-stellar-vertical-offset="-620">
                     <div class="ribbon"></div>
                     <h3>Paquete básico</h3>
                     <p>Disfruta de nuestro paquete sencillo, prefecto para vacaciones improvisadas donde el presupuesto es limitado.</p>
@@ -131,7 +131,7 @@
              <div class="image_food" data-background='img/DSCF0371'></div>
              <div class="image_food" data-background='img/DSCF0330'></div>
          </section>
-         <section class="fullScreen" id="contacto">
+         <section class="fullScreen" id="contacto" data-stellar-background-ratio="0.2">
              <div class="marginTop callig">
                  <h1>Contacto</h1>
                  <div class="half">
@@ -144,7 +144,7 @@
                      <p>Teléfono 552345545</p>
                  </div>
                  <div class="half">
-                    <div id="google_canvas">
+                    <div id="google_canvas" data-stellar-ratio="2.08">
                         
                     </div>
                  </div>
@@ -159,6 +159,10 @@
         <script src="js/jquery.ui.core.min.js"></script>
         <script src="js/jquery.ui.effect.min.js"></script>
         <script src="js/jquery.flip.min.js"></script>
+        <script src="js/scrollto.min.js"></script>
+        <script src="js/localscroll.min.js"></script>
+        <script src="js/stellar.min.js"></script>
+        <script src="js/jquery.scrollorama.js"></script>
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
